<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.WelcomeActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/size_150dp"
        android:layout_height="@dimen/size_150dp"
        android:src="@drawable/logo_aula_matriz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_movie_filter_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/txvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_bienvenida"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22sp"
        android:layout_marginTop="@dimen/size_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_bienvenida"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitulo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txvAcercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de_bienvenida"
        android:textColor="@color/color_accent"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvDescripcion"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEmpezarAhora"
        style="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_empezar_ahora_bienvenida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAcercade"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>